--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "jest": "^24.1.0"
+    "cheerio": "^1.0.0-rc.3",
+    "jest": "^24.1.0",
+    "mustache": "^4.0.1"
   }
 }
