--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "cheerio": "^1.0.0-rc.3",
     "jest": "^24.1.0",
-    "mustache": "^4.0.1"
+    "mustache": "^4.0.1",
+    "supertest": "^4.0.2"
   }
 }
